	12122,Dasik - FOOD should add temporary +30 Hit
	12123,Oil_and_Honey_Pastry - FOOD should add temporary +30 Flee
	12124,Various_colored_Rice_Cake - FOOD should add temporary +10 ATK +10 MATK
	7458,Fortune_Horn - it's a custom name yet
	12016,Speed_Increasing_Potion no bonus... Turbo Track race item
	12017,Speed_Decreasing_Potion no bonus... Turbo Track race item

	--
11/29
	* Updated Earth Elemental Convertor, thanks to reddozen [Vicious]
	* Added temp skills to Ayothaya MVP Lady Tany. [Lupus]
	  Also added her real slaves, thanks to MasterOfMuppets for info
	* Update produce_db.txt with cooking items coments, thanks to battousai90 [Lupus]
11/28
	* Lighthalzen MVP drop update done by MasterOfMuppets - Still need more work. [Vicious]
	* Reduced the range of Focused Arrow Strike by 10, that range should be
	  added via the Vulture skill. [Skotlex]
	* Updated skill ranges for Alchemist and Monk, thanks to Komurka. [Skotlex]
11/27
	* Added Sonic Blow to skill_castnodex so that the skill delay applies to
	  walking as well. [Skotlex]
	* Fixed Adrenaline2 and Berserk Pitcher's inf2 (were not set to spirit
	  skill) [Skotlex]
	* Reverted Ruwach's range to 2. [Skotlex]
	* Updated skill_db to make all ranged skills with range 8 become 9. Also
	  explained wtf is "maxcount" in skill_db. [Skotlex]
	* Fixed SA skills showing up. wtf is "maxcount" in skill_db??? [Vicious]
11/26
	* Updated effect boxes, according to RO Magazine [Vicious]
	* Updated Redemptio(no target, not dex-effected) [Vicious]
	* Updated blowcount on 2nd class quest skills [Vicious]
	* Updated sell prices on new items [Vicious]
	* Updated Great Axe to give +5 skillblown to Mammonite, and BonGun card +5
	  knockback to Bash [Skotlex]
	* Changed the range of Blitz Beat and Falcon Assault to 5 [Skotlex]
	  (Vulture Eye bonus is now applied to these skills)
11/25
	* Updated skill ranges of Rogue and Priest skills, thanks to Komurka
	  for the information. [Skotlex]