@@ -101,9 +101,8 @@ monster_skill_add_range: 15
 // Default 6 (mobs + pets)
 skillrange_by_distance: 6
 
-// Should weapon-based offensive skills use the equipped weapon's range rather than the range defined in skill_db? (Note 1)
-// NOTE: This setting only affects target-selectable offensive skills with a few exceptions
-//       (eg: Spear Boomerang, Grim Tooth, Acid Terror, etc)
+// Should the equipped weapon's range override the skill's range defined in the skill_db for most weapon-based skills? (Note 1)
+// NOTE: Skills affected by this option are those whose range in the skill_db are negative.
 skillrange_from_weapon: no
 
 // Damaged delay rate for players (Note 2)
